# Single.Cell.ssGSEA

./: .gitignore  Dockerfile  README.md  build.xml  build_package_and_docker.sh  documentation.md  manifest  prerelease.version  pyproject.toml  release.version  run_sc_ssgsea.py  sc_ssGSEA_driver.sh
data/: cluster_info.txt
data/91737/: cluster_expression.csv  gp_execution_log.txt  scGSEA_scores.csv  scGSEA_scores.gct  stderr.txt  stdout.txt
docs/: documentation.md
docs/v1/: index.md
docs/v3/: index.md
src/: ExampleModule.py  ExampleModule_command_line_call.py  normalize_and_aggregate.R  normalize_and_aggregate.Rte  preprocess.R  run_scgsea.py  scgsea.py  scgsea_command_line_call.py  scgsea_helper.py  scgsea_wrapper.py
src/sc_ssGSEA/: Expression.py  SeuratObject.py  __init__.py  sc_ssGSEA.py
