[build-system]
requires = ["setuptools==70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sc_ssGSEA"

version = "1.1.2"

authors = [
	{name = "Alexander T. Wenzel", email = "atwenzel@ucsd.edu"},
	{name = "John Jun"}
]

dependencies = [
	"pandas==2.2.2",
	"numpy==1.26.4",
	"scipy==1.11.0",
	"typing-extensions==4.12.1",
	"h5py==3.12.1"
]

description = "A Python package for performing gene set enrichment analysis on single cell clusters."

readme = "README.md"

requires-python = ">=3.11.0"